# rokit

./: .gitignore  README.md
rk_common/: CMakeLists.txt  README.md  package.xml
rk_common/cfg/: rosconsole.conf
rk_common/include/rk_common/: global.h  params_helper.h  pinhole_camera.h  utils.h
rk_common/src/: pinhole_camera.cpp  utils.cpp
vikit/: CMakeLists.txt  README.md  package.xml
vikit/data/: alignment.csv  alignment_multi_scale.csv  alignment_pyramidal_30_pyr4.csv  alignment_pyramidal_30_pyr6.csv  alignment_pyramidal_60.csv
vikit/include/vikit/: colors.h  derivatives.h  feature.h  feature_detector.h  frame.h  image_alignment.h  interpolate.h  point.h  utils.h
vikit/launch/: image_align.launch
vikit/scripts/: analyze_alignment.py
vikit/src/: derivatives.cpp  feature_detector.cpp  frame.cpp  image_alignment.cpp  interpolate.cpp  point.cpp  utils.cpp
vikit/test/: test_alignment.cpp  test_depth.cpp  test_feature_detector.cpp  test_img_jac.cpp  test_img_pyr.cpp
