<?xml version="1.0"?>
<package format="2">
  <name>rk_common</name>
  <version>0.0.0</version>
  <description>A base package for remaining ros packages.</description>
  <maintainer email="kvmanohar22@gmail.com">Kv Manohar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <export>
  </export>

</package>
