<?xml version="1.0"?>
<package format="2">
  <name>vikit</name>
  <version>0.0.0</version>
  <description>The vision kit package.</description>
  <maintainer email="kvmanohar22@gmail.com">Kv Manohar</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rk_common</depend>

  <export>
  </export>

</package>
